syntax = "proto3";

package github.com.ajvideira.codepix;

option go_package = "protofiles;pb";

message PixKeyRegistration {
  string kind = 1;
  string key = 2;
  string accountID = 3;
}

message PixKeyFind {
  string kind = 1;
  string key = 2;
}

message Bank {
  string id = 1;
  string code = 2;
  string name = 3;
}

message Account {
  string id = 1;
  string number = 2;
  string ownerName = 3;
  string createdAt = 4;
  Bank bank = 5;
}

message Pixkey {
  string id = 1;
  string kind = 2;
  string key = 3;
  Account account = 4;
}

message PixKeyCreatedResult {
  string id = 1;
  string status = 2;
  string error = 3;
}

service PixKeyService {
  rpc RegisterPixKey (PixKeyRegistration) returns (PixKeyCreatedResult) {};
  rpc Find (PixKeyFind) returns (Pixkey) {};
}